2010-12-22  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        CopyTex{Sub}Image2D check always if the bound fbo's internal color format is compatible
        https://bugs.webkit.org/show_bug.cgi?id=51423

        * fast/canvas/webgl/tex-input-validation-expected.txt: Add test cases for copying from webgl's internal FBO.
        * fast/canvas/webgl/tex-input-validation.html: Ditto.

2010-12-22  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Sam Weining.

        AX: WAI-ARIA textbox role needs different AXRole, depending on value of aria-multiline property
        https://bugs.webkit.org/show_bug.cgi?id=51481

        * platform/mac/accessibility/aria-multiline-expected.txt: Added.
        * platform/mac/accessibility/aria-multiline.html: Added.

2010-12-22  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        CSS 2.1 failure: counter-increment-013 fails
        https://bugs.webkit.org/show_bug.cgi?id=51483
        
        Layout test version of CSS 2.1 counter-increment-013 test.

        * fast/css/counters/counter-increment-overflow-expected.txt: Added.
        * fast/css/counters/counter-increment-overflow.html: Added.

2010-12-22  Chang Shu  <chang.shu@nokia.com>

        Unreviewed layout test fix.

        Revert changeset 74481: http://trac.webkit.org/changeset/74481,
        as it causes regression on layout tests.

        * platform/qt/Skipped:

2010-12-22  Tony Gentilcore  <tonyg@chromium.org>

        Unreviewed build fix.

        [chromium] console-websocket-error sometimes times out
        https://bugs.webkit.org/show_bug.cgi?id=51482

        * platform/chromium/test_expectations.txt:

2010-12-21  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] Enabling layout tests in platform/chromium/compositing
        and adding new layout test to check for crash on empty render surfaces.